--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kit",
   "version": "1.0.0",
-  "description": "Universal JS app scaffolding",
-  "main": "src/index.js",
+  "description": "Scaffolding for a single page ES6 app",
+  "main": "src/app.js",
   "scripts": {
     "build": "./bin/build.sh",
     "eslint": "./bin/eslint.sh",
@@ -15,19 +15,13 @@
       "patterns": [
         "src/*"
       ],
-      "extensions": "js",
-      "ignore": [
-        "src/universal/dist/bundle.js"
-      ]
+      "extensions": "js"
     },
     "browserify": {
       "patterns": [
-        "src/universal/*"
+        "src/*"
       ],
-      "extensions": "js",
-      "ignore": [
-        "src/universal/dist/bundle.js"
-      ]
+      "extensions": "js"
     },
     "css": {
       "patterns": [
@@ -53,8 +47,5 @@
     "stylelint-config-standard": "^15.0.0",
     "uglify-js": "^2.7.4"
   },
-  "dependencies": {
-    "express": "^4.14.0",
-    "oat": "^1.0.6"
-  }
+  "dependencies": {}
 }
