--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,8 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "indentation": 4,
+    "rule-nested-empty-line-before": null,
+    "block-closing-brace-empty-line-before": null
+  }
 }
