--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "dist/index.html",
   "scripts": {
     "build": "./bin/build.sh",
-    "scss": "./bin/css/stylelint.sh; ./bin/css/sass.sh; ./bin/css/autoprefix.sh",
-    "js": "./bin/js/browserify.sh",
-    "watch": "./bin/ws/prepare.sh; ./bin/html/constants.sh; node bin/ws/watch.js"
+    "watch": "./bin/ws/watch.sh"
   },
   "browserslist": [
     "last 2 version",
@@ -15,23 +13,23 @@
   ],
   "repository": "https://github.com/mgrahamjo/kit",
   "author": "Mike Johnson",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.22.0",
     "clean-css": "^3.4.21",
     "eslint": "^3.10.2",
     "hash-filename": "^1.0.4",
     "html-minifier": "^3.2.3",
     "map-replace": "^1.0.2",
     "node-sass": "^3.13.0",
-    "persistify": "^1.1.1",
     "postcss-cli": "^2.6.0",
     "stylelint": "^7.6.0",
     "stylelint-config-standard": "^15.0.0",
-    "uglify-js": "^2.7.4"
+    "webpack": "^1.14.0"
   },
   "dependencies": {
     "classlist-polyfill": "^1.0.3",
