--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "classlist-polyfill": "^1.0.3",
     "promise-polyfill": "^6.0.2",
-    "uav": "^2.0.1",
-    "uav-router": "0.0.3"
+    "uav": "^2.0.8",
+    "uav-router": "^0.0.6"
   }
 }
